--- a/css/Styles.css
+++ b/css/Styles.css
@@ -54,22 +54,25 @@ main {
 }
 
 #board {
-    display: flex;
-    flex-wrap: wrap;
-    width: 200px; /* Ajusta este valor si deseas cambiar el tamaño del tablero */
-    margin: 1em 0;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 10px;
+    max-width: 200px; /* Ajusta según sea necesario */
+    margin: auto;
 }
 
-#board div {
-    width: 50px; /* Ajusta este valor si deseas cambiar el tamaño de las celdas */
-    height: 50px; /* Ajusta este valor si deseas cambiar el tamaño de las celdas */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid #ddd;
-    margin: -1px 0 0 -1px; /* Ajusta los márgenes si es necesario */
+.board-cell {
+    background-color: #f0f0f0;
+    border: 1px solid #ccc;
+    padding: 20px;
+    text-align: center;
+    font-size: 1.5rem;
     cursor: pointer;
-    font-size: 1.5em; /* Ajusta el tamaño de la fuente según sea necesario */
+    user-select: none;
+}
+
+.board-cell.selected {
+    background-color: #e3e3e3; /* Color de fondo cuando la celda está seleccionada */
 }
 
 #timer {
@@ -103,4 +106,19 @@ main {
 #close-modal {
     cursor: pointer;
     float: right;
+}
+
+#current-word-container {
+    display: flex;
+    align-items: center;
+    margin: 1em 0;
+}
+
+#current-word {
+    margin-right: 10px;
+    font-size: 1.2em;
+}
+
+button {
+    margin: 5px;
 }
