--- a/css/Styles.css
+++ b/css/Styles.css
@@ -122,3 +122,37 @@ main {
 button {
     margin: 5px;
 }
+
+.hidden {
+    display: none;
+}
+
+#game-over {
+    text-align: center;
+    margin-top: 20px;
+    font-size: 1.5em;
+    color: red;
+}
+
+#game-over-info {
+    text-align: center;
+}
+
+#game-over-info button {
+    margin-top: 10px;
+}
+
+.contact-htp {
+    margin-right: 50%;
+    margin-bottom: 25%;
+}
+
+.index-htp {
+    margin-left: 50%;
+    margin-bottom: 25%;
+}
+
+.contenedor-htp {
+    display: flex;
+    justify-content: center;
+}
